--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "homepage": "https://ShivamPandey1726.github.io/FrontEnd",
+  "homepage": "https://ShivamPandey1726.github.io/BirthChart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
